...
                ) {
                    bluetoothRequestLaunch.launch(Manifest.permission.BLUETOOTH_CONNECT)
                }
                bluetoothRequestLaunch.launch(Manifest.permission.BLUETOOTH_CONNECT)
            },
        ) {
            Text(text = "Turn on/off the Bluetooth")
        }
        Spacer(modifier = modifier.height(12.dp))
        Text(text = "Status: Bluetooth is ${if (isEnabled) "ON" else "OFF"}")
    }
}
