...
                ) {
                    isRecording = !isRecording
                } else {
                    microRequestLaunch.launch(Manifest.permission.RECORD_AUDIO)
                }
            }) {
            Text(if (isRecording) "Stop" else "Start")
        }
        Spacer(modifier = modifier.height(16.dp))
        Text(text = "Amplitude: $amplitudeDB dB")
    }

    val audioRecord by remember {
...
